# AiBToS-Project1

./: .gitignore  CMakeLists.txt  README.md
input/: clustalo-permuted-quicktree.adj  clustalo-permuted-rapidnj.newick  clustalo-permuted.stockholm  clustalo-quicktree.adj  clustalo-quicktree.newick  clustalo-rapidnj.adj  clustalo-rapidnj.newick  kalign-permuted-quicktree.adj  kalign-permuted.stockholm  kalign-quicktree.adj  kalign-rapidnj.adj  kalign-rapidnj.newick  mafft-permuted-quicktree.adj  mafft-permuted-quicktree.newick  mafft-permuted-rapidnj.adj  mafft-permuted-rapidnj.newick  mafft-permuted.stockholm  mafft-quicktree.adj  mafft-quicktree.newick  mafft-rapidnj.adj  mafft-rapidnj.newick  mafft.stockholm  muscle-permuted-quicktree.adj  muscle-permuted-quicktree.newick  muscle-permuted-rapidnj.newick  muscle-permuted.stockholm  muscle-quicktree.adj  muscle-quicktree.newick  muscle-rapidnj.adj  muscle-rapidnj.newick  test10.adj  test11.adj  test12.adj  test13.adj  test14.adj  test15.adj  test16.adj  test2.adj  test3.adj  test4.adj  (+7 more)
input/christians/: clustalo-permuted-quicktree.newick  clustalo-permuted-rapidnj.adj  clustalw2-normal-quicktree.adj  clustalw2-normal-quicktree.newick  clustalw2-normal-rapidnj.adj  clustalw2-normal-rapidnj.newick  clustalw2-normal.stockholm  clustalw2-permuted-quicktree.adj  clustalw2-permuted-quicktree.newick  clustalw2-permuted-rapidnj.adj  clustalw2-permuted-rapidnj.newick  clustalw2-permuted.stockholm  kalign-normal-quicktree.adj  (+18 more)
output/: performance.txt
src/: Days.cpp  Days.h  generator.cpp  main.cpp  testCountingSort.cpp
